Root color indicators

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,13 @@
             width: 150px;
         }
 
+        .root-color {
+            float: left;
+            width: 18px;
+            height: 18px;
+            margin-right: 5px;
+        }
+
         #instructions {
             clear: both;
             margin: 20px;
