--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,15 @@
             background: black;
         }
 
-        canvas {
+        #output {
             float: left;
+            margin: 20px;
+        }
+
+        canvas {
             width: 400px;
             height: 400px;
-            border: 1px solid red;
-
-            margin: 20px;
+            border: 1px solid white;
         }
 
         form {
@@ -53,7 +55,10 @@
     </style>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<div id="output">
+    <canvas id="canvas"></canvas><br>
+    Scale: <span id="scale"></span>
+</div>
 
 <form name="settings">
     <label>Presets</label>
@@ -70,7 +75,7 @@
         <label>Iterations</label>
         <input name="iterations" type="number" value="10">
         <label>Fade distance</label>
-        <input name="fade" type="number" value="5">
+        <input name="fade" type="number" value="5" step="0.1">
         <label>Roots</label>
         <div id="roots"></div>
     </fieldset>
