--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
             background: black;
         }
 
-        canvas {
+        #output {
             float: left;
+            margin: 20px;
+        }
+
+        canvas {
             width: 400px;
             height: 400px;
-            border: 1px solid red;
-
-            margin: 20px;
+            border: 1px solid white;
         }
 
         form {
@@ -50,10 +52,17 @@
             clear: both;
             margin: 20px;
         }
+
+        #parameter {
+            display: none;
+        }
     </style>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<div id="output">
+    <canvas id="canvas"></canvas><br>
+    Scale: <span id="scale"></span>
+</div>
 
 <form name="settings">
     <label>Presets</label>
@@ -63,14 +72,22 @@
         <label>Iteration</label>
         <input name="f" type="text" placeholder="f(z)">
         -->
-        <label>Re (x) iteration</label>
-        <input name="x" type="text" placeholder="next x">
-        <label>Im (y) iteration</label>
-        <input name="y" type="text" placeholder="next y">
+        <div id="iterations">
+            <label>Re (x) iteration</label>
+            <input name="x" type="text" placeholder="next x">
+            <label>Im (y) iteration</label>
+            <input name="y" type="text" placeholder="next y">
+        </div>
+        <div id="parameter">
+            <label>Re(c)</label>
+            <input name="re_c" type="number" step="0.01" placeholder="Re(c)">
+            <label>Im(c)</label>
+            <input name="im_c" type="number" step="0.01" placeholder="Im(c)">
+        </div>
         <label>Iterations</label>
         <input name="iterations" type="number" value="10">
         <label>Fade distance</label>
-        <input name="fade" type="number" value="5">
+        <input name="fade" type="number" value="5" step="0.1">
         <label>Roots</label>
         <div id="roots"></div>
     </fieldset>
@@ -91,5 +108,5 @@
         Fade shows how far on the complex plane the iteration result must be from its closest root to draw a completely black pixel.
     </p>
 </div>
-<script type="text/javascript" src="bundle.js?3ea0d632b2a5a932d1e1"></script></body>
+<script type="text/javascript" src="bundle.js?c9832ffb96c4486e0128"></script></body>
 </html>
